<resources>
    <string name="app_name">WSC-Connect</string>
    <string name="title_apps">Apps</string>
    <string name="title_my_apps">My Apps</string>
    <string name="required">Required</string>
    <string name="just_now">Just now</string>
    <string name="dialog_login_username">Username</string>
    <string name="dialog_login_password">Password / Auth-Token</string>
    <string name="dialog_login_third_party">Third-party login</string>
    <string name="dialog_login_third_party_info">Use the third-party login when you used a third-party login for %1$s.</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="login_failed">Login failed</string>
    <string name="login_failed_global">An error occurred while logging you in. Try again.</string>
    <string name="fragment_app_notifications_loading_info">Loading notifications for %1$s…</string>
    <string name="fragment_accounts_empty">You are not logged in to any app.</string>
    <string name="fragment_accounts_login">Login now!</string>
    <string name="fragment_app_notifications_empty">No recent notifications</string>
    <string name="fragment_app_notifications_app_removed">%1$s is no available anymore. You have been logged out.</string>
    <string name="fragment_app_notifications_logged_out">You have been logged out from %1$s. Please login again.</string>
    <string name="firebase_token_required">Your push-token is not generated yet. Please try again.</string>
    <string name="no_internet_connection">You are not connected to the internet.</string>
    <string name="fragment_apps_empty">No active apps found</string>
    <string name="error_general">An error occurred. Try again.</string>
    <string name="error_permission_external">Without external permission we cannot play sounds for notifications.</string>
    <string name="error_permission_external_button">Change permissions</string>
    <string name="apps_search">Search apps…</string>
    <string name="apps_sort">Sort apps…</string>
    <string name="action_about">About</string>
    <string name="action_account">My account</string>
    <string name="action_settings">Settings</string>
    <string name="close">Close</string>
    <string name="load_more">Load more</string>
    <string name="dialog_about_text">WSC-Connect connects all your favorite WSC (WoltLab&#174; Suite Core)-Apps in one place. Receive notifications via push message and much more.\n\n<b>You own a WSC-App</b>? Visit <a href="https://www.wsc-connect.com">www.wsc-connect.com</a> and register your App now!\n\nWSC-Connect is not associated with the WoltLab&#174; GmbH.\n\n<b>Contact</b>\n<a href="mailto:hello@wsc-connect.com">hello@wsc-connect.com</a>\n\n<b>Legal Notice</b>\nChristopher Walz\nNeuköllner Straße 2\n71229 Leonberg\nGermany</string>
    <string name="dialog_action_text">Your instance token helps us to identify you, so we can send you push messages:\n\n%1$s</string>
    <string name="dialog_action_no_token">No instance token generated yet.</string>
    <string name="dialog_action_copy_token">Copy instance token</string>
    <string name="dialog_action_token_copied">Instance token copied to clipboard</string>
    <string name="fragment_app_messagess_empty">No push messages found</string>
    <string name="fragment_app_messagess_loading_info">Loading push messages for %1$s…</string>
    <string name="fragment_app_forum_loading_info">Loading boards for %1$s…</string>
    <string name="error_request_api_not_available">Our server is busy, try again in a few minutes.</string>
    <string name="error_app_version_title">Outdated app version</string>
    <string name="error_app_version_message">Your installed app version is outdated. To continue using the app, please update it.</string>
    <string name="error_app_version_button">Visit the Play-Store</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_vibration_title">Vibration</string>
    <string name="pref_notifications_vibration_summary">Vibration for new notifications</string>
    <string name="pref_notifications_ringtone_title">Sound</string>
    <string name="pref_notifications_ringtone_summary">Sound for new notifications</string>
    <string name="pref_notifications_enabled_title">Enable notifications</string>
    <string name="pref_notifications_enabled_summary">Receive notifications via push message</string>
    <string name="pref_others">Other</string>
    <string name="pref_others_open_in_webview">Open websites in app</string>
    <string name="action_sort_users">Sort by users</string>
    <string name="action_sort_name">Sort by name</string>
    <string name="fragment_apps_details_logged_in_switch">Login with a different account</string>
    <string name="fragment_apps_details_logged_in_show">Open in My Apps</string>
    <string name="fragment_apps_details_logged_in_as">Logged in as: %1$s</string>
    <string name="fragment_my_apps_username">Logged in as %1$s</string>
    <string name="activity_app_tab_forum">Forum</string>
    <string name="activity_app_tab_webview">Website</string>
    <string name="activity_app_tab_messages">Messages</string>
    <string name="activity_app_tab_notifications">Notifications</string>
    <string name="activity_app_tab_conversations">Conversations</string>
    <string name="fragment_app_conversations_empty">No recent conversations</string>
    <string name="fragment_app_conversations_loading_info">Loading conversations for %1$s…</string>
    <string name="list_conversation_message_header_participants">Participants: %1$s</string>
    <string name="list_conversation_message_dialog_copied">Message copied</string>
    <string name="submit">Submit</string>
    <string name="list_conversation_message_form_hint">Write an answer…</string>
    <string name="list_conversation_message_form_closed">Conversation closed</string>
    <string name="list_conversation_message_form_error_censorship">Your message contains the following censored words: %1$s</string>
    <string name="list_conversation_message_form_error_length">Your message is too long with %1$d characters. Maximum characters: %2$d</string>
    <string name="fragment_app_conversations_package">Please contact the admin of %1$s. The conversation plugin could not be found.</string>
    <string name="activity_app_token_null">A critical error occurred. Please login again.</string>
    <string name="default_notification_channel">WSC-Connect Notifications</string>
    <string name="fragment_app_forum_empty_boards">No boards found.</string>
    <string name="fragment_app_forum_empty_threads">No threads found.</string>
    <string name="fragment_app_forum_empty_posts">No posts found.</string>
    <string name="list_post_header_author">Author: %1$s</string>
    <string name="login_privacy">By logging in I accept the <a href="https://www.wsc-connect.com/privacy">privacy policy</a> of WSC-Connect</string>
    <string name="dialog_privacy_title">Privacy policy update</string>
    <string name="dialog_privacy_accept">Accept</string>
    <string name="fragment_apps_search_empty">No apps found</string>

    <string name="dialog_privacy_text1">Due to the new data protection regulation of the EU we have updated our privacy policy.\nYou can find them on <a href="https://www.wsc-connect.com/privacy">our website</a>.\n\n<b>What do the changes mean for me?</b>\n\n- We store even less of your data on our servers\n- The content of the push notifications you receive from your registered apps is now encrypted\n\nIn order for these changes to take effect, you have been automatically logged out of all apps. Please log in again.</string>
    <string name="dialog_privacy_text2">Continue having fun with WSC-Connect!</string>
    <string name="dialog_privacy_insecure"><b>Insecure login</b>: The push messages you are receiving are not encrypted. Please log in again. If it still doesn\'t work, the website you\'re trying to log in has an outdated WSC-Connect plugin installed.</string>
    <string name="dialog_privacy_secure"><b>Secure login</b>: The push messages you are receiving are encrypted.</string>
    <string name="all_apps">All Apps</string>
    <string name="more">More</string>
    <string name="top_apps">Top Apps</string>
    <string name="new_apps">Newest Apps</string>

    <array name="list_my_apps_dialog_items">
        <item>Logout</item>
    </array>

    <array name="list_conversation_message_dialog_items">
        <item>Copy message</item>
        <item>Show full message</item>
    </array>

    <plurals name="fragment_apps_subtitle_apps">
        <item quantity="one">%1$d App</item>
        <item quantity="other">%1$d Apps</item>
    </plurals>

    <plurals name="fragment_apps_subtitle_users">
        <item quantity="one">%1$d User</item>
        <item quantity="other">%1$d Users</item>
    </plurals>
</resources>
