<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_notifications">
        <CheckBoxPreference
            android:key="pref_notifications_vibration"
            android:title="@string/pref_notifications_vibration_title"
            android:summary="@string/pref_notifications_vibration_summary"
            android:defaultValue="true" />
        <RingtonePreference
            android:key="pref_notifications_ringtone"
            android:title="@string/pref_notifications_ringtone_title"
            android:summary="@string/pref_notifications_ringtone_summary"
            android:ringtoneType="notification" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_others">
        <CheckBoxPreference
            android:key="pref_others_open_in_webview"
            android:title="@string/pref_others_open_in_webview"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>
