<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">

    <EditText
        android:id="@+id/dialog_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_login_username"
        android:inputType="textFilter|textNoSuggestions"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dialog_login_password"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dialog_login_password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <ImageView
            android:id="@+id/dialog_login_password_visible"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/layout_margin_small" />
    </LinearLayout>

    <Button
        android:id="@+id/dialog_login_submit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:id="@+id/dialog_login_third_party_submit"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_login_third_party"
        android:textColor="@color/textColor" />

    <TextView
        android:id="@+id/dialog_login_third_party_info"
        style="@style/TextSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />
</LinearLayout>